[gd_scene load_steps=4 format=3 uid="uid://cmpl1ipkgju86"]

[ext_resource type="Script" path="res://scripts/powerup_menu.gd" id="1_vx73l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54xtl"]
bg_color = Color(0, 0, 0, 0.12549)

[sub_resource type="GDScript" id="GDScript_b7ja5"]
script/source = "extends Button

func _ready() -> void:
	call_deferred(\"grab_focus\")
"

[node name="powerup_menu" type="CanvasLayer"]
script = ExtResource("1_vx73l")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_54xtl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -100.0
offset_right = 152.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Button" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"
script = SubResource("GDScript_b7ja5")

[node name="Button2" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "2"

[node name="Button3" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "3"

[connection signal="pressed" from="Control/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
